--- a/JavaCollections/pom.xml
+++ b/JavaCollections/pom.xml
@@ -32,7 +32,21 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.6.1</version>
 		</dependency>
-	
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
